welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:4: error: value min_value is not a member of object Integer
  var m2 : Int = Integer.min_value
                         ^